--- a/AccountOwnerServer/appsettings.json
+++ b/AccountOwnerServer/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "mysqlconnection": {
+    "connectionString": "server=localhost;userid=root;password=yourpass;database=accountowner;"
+  },
   "AllowedHosts": "*"
 }
