--- a/AccountOwnerServer/appsettings.json
+++ b/AccountOwnerServer/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "mysqlconnection": {
-    "connectionString": "server=localhost;userid=root;password=yourpass;database=accountowner;"
+    "connectionString": "server=192.168.1.103;port=33060;userid=root;password=secret;database=AccountOwner;"
   },
   "AllowedHosts": "*"
 }
